# ToDoList

./: .env.example  .gitignore  README.md  config.py  docker-compose.yml  init_database.py  main.py  pyproject.toml
alembic/: env.py
app/api/: routers.py
app/api/controller_schemas/requests/: __init__.py  project_request.py  task_request.py  user_request.py
app/api/controllers/: __init__.py  projects_controller.py  tasks_controller.py
app/cli/: console.py
app/commands/: autoclose_overdue.py  scheduler.py
app/db/: base.py  session.py
app/exceptions/: base.py  repository_exceptions.py  service_exceptions.py
app/models/: project.py  task.py
app/repositories/: base.py  project_repository.py  task_repository.py
app/services/: project_service.py  task_service.py
cli/: commands.py
core/: entities.py  services.py
storage/: memory.py
