[tool.poetry]
name = "todolist"
version = "0.2.0"
description = "A todo list application with PostgreSQL"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
schedule = "^1.2.0"
click = "^8.1.0"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.alembic]
script_location = "alembic"
prepend_sys_path = "."
version_path_separator = "os"
